<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Puzzle</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="select_puzzle_header">VALITSE PALAPELI</string>
    <string name="difficulty">Vaikeustaso</string>
    <string name="menu_difficulty">Vaikeustaso</string>
    <string name="menu_difficulty_supereasy">Todella helppo</string>
    <string name="menu_difficulty_easy">Helppo</string>
    <string name="menu_difficulty_medium">Keskivaikea</string>
    <string name="menu_difficulty_hard">Vaikea</string>
    <string name="menu_new_game">Uusi peli</string>
    <string name="menu_reset">Aloita alusta</string>
    <string name="show_cover">Näytä kuva</string>
    <string name="menu_clean_cache">Tyhjennä välimuisti</string>

</resources>
