<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fi.atteheino.puzzle.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100">
        <menu> 
            <item android:id="@+id/menu_difficulty"
                  android:title="@string/menu_difficulty">
                <menu>
                    <item android:id="@+id/menu_difficulty_supereasy"
                          android:title="@string/menu_difficulty_supereasy"/>
                    <item android:id="@+id/menu_difficulty_easy"
                          android:title="@string/menu_difficulty_easy"/>
                    <item android:id="@+id/menu_difficulty_medium"
                          android:title="@string/menu_difficulty_medium"/>
                    <item android:id="@+id/menu_difficulty_hard"
                          android:title="@string/menu_difficulty_hard"/>
                </menu>
            </item>
            <item android:id="@+id/menu_new_game"
                  android:title="@string/menu_new_game" />
            <item android:id="@+id/menu_reset"
                  android:title="@string/menu_reset" />
    
        </menu>
    </item>   
    
</menu>
